Finalizada pagina do Igor Presnyakov

--- a/gallery-hex.html
+++ b/gallery-hex.html
@@ -110,7 +110,7 @@
 					<div class="hexagon">
 						<div class="hexagon-in1">
 							<div class="hexagon-in2">
-								<a href="single-image.html">
+								<a href="igorpage.html">
 								<img class="thumbnail" src="img/igor1.jpg" alt="thumbnail"></a>
 							</div>
 						</div>
@@ -121,7 +121,7 @@
 					<div class="hexagon">
 						<div class="hexagon-in1">
 							<div class="hexagon-in2">
-								<a href="single-image.html">
+								<a href="igorpage.html">
 								<img class="thumbnail" src="img/igor2.jpg" alt="thumbnail"></a>
 							</div>
 						</div>
@@ -132,7 +132,7 @@
 					<div class="hexagon">
 						<div class="hexagon-in1">
 							<div class="hexagon-in2">
-								<a href="single-image.html">
+								<a href="igorpage.html">
 								<img class="thumbnail" src="img/igor3.jpg" alt="thumbnail"></a>
 							</div>
 						</div>
@@ -143,7 +143,7 @@
 					<div class="hexagon">
 						<div class="hexagon-in1">
 							<div class="hexagon-in2">
-								<a href="single-image.html">
+								<a href="igorpage.html">
 								<img class="thumbnail" src="img/igor4.jpg" alt="thumbnail"></a>
 							</div>
 						</div>
